# haskell-template

./: .gitignore  .nixignore  CHANGELOG.md  LICENSE  README.md  default.nix  flake.nix  nixpkgs.nix  shell.nix  template.cabal
.github/workflows/: ci.yml
bench/: Main.hs
exe/: Main.hs
lib/: Template.hs
nix/: flake-compat.nix  haskell-packages.nix  nixpkgs.nix  override-haskell-packages.nix  pkgs.nix
nix/haskell-packages/: relude.nix  relude.patch  template.nix
nix/lib/: gitignore.nix  haskell-overlay.nix  override-haskell-packages.nix
nix/overlays/: haskell-packages.nix  lib.nix
nix/patches/: relude.patch
scripts/: format-haskell  format-nix  haddock-open  hoogle-open
src/: Main.hs  Template.hs
test/: Main.hs  TemplateTest.hs
