cabal-version: 2.2

name:        template
version:     0.1.0.0
synopsis:    Template for my Haskell + Nix projects
description: Template for my Haskell + Nix projects
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/haskell-template
license:     ISC
copyright:   2022 Evan Relf

common common
  build-depends:
    , base
    , relude
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude
  default-language: Haskell2010
  default-extensions:
    -- GHC2021 (https://git.io/JsCTl)
    BangPatterns BinaryLiterals ConstrainedClassMethods ConstraintKinds
    DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift
    DeriveTraversable EmptyCase EmptyDataDeriving ExistentialQuantification
    ExplicitForAll FlexibleContexts FlexibleInstances GADTSyntax
    GeneralizedNewtypeDeriving HexFloatLiterals ImportQualifiedPost InstanceSigs
    KindSignatures MultiParamTypeClasses NamedFieldPuns NamedWildCards
    NumericUnderscores PolyKinds PostfixOperators RankNTypes ScopedTypeVariables
    StandaloneDeriving StandaloneKindSignatures TupleSections TypeApplications
    TypeOperators TypeSynonymInstances
    -- Extra
    BlockArguments
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    LambdaCase
    OverloadedStrings
    StrictData
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=missing-methods
    -Werror=partial-fields
    -Widentities
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wno-unticked-promoted-constructors
    -Wredundant-constraints

common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: common
  hs-source-dirs: src
  exposed-modules:
    Template

executable template
  import:
    , common
    , executable
  main-is: src/Main.hs
  build-depends:
    , template

test-suite test
  import:
    , common
    , executable
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
    , tasty
    , tasty-hunit
    , template
